--- a/Demo_Site_12/index.html
+++ b/Demo_Site_12/index.html
@@ -3,6 +3,8 @@
 <head>
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
+    
+    <title>Demo Site 12 </title>
 
 <link rel="stylesheet" type="text/css" href="style.css">
 
